Removed labtestpack
